Closed Bug 333668 Opened 19 years ago Closed 18 years ago

Dereferencing uninitialized lastnode in nsXULTemplateQueryProcessorRDF::CompileQuery

Categories

(Core :: XUL, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: jwatt, Assigned: enndeakin)

References

(Blocks 1 open bug, )

Details

(Keywords: coverity)

Attachments

(1 file)

If mSimpleRuleMemberTest evaluates to true we'll end up with |lastnode| being a dangling pointer.
Oh, and we'll do NS_FAILED(rv) on an uninitialized rv.
Flags: blocking1.9a1?
Assignee: jwatt → nobody
Assignee: nobody → enndeakin
Status: NEW → ASSIGNED
Attachment #237139 - Flags: superreview?(bugmail)
Attachment #237139 - Flags: review?(bugmail)
Comment on attachment 237139 [details] [diff] [review] Add asserttion and return an error Please also initialize |lastnode| to nsnull. It's not going to cost anything and is more future-proof
Attachment #237139 - Flags: superreview?(bugmail)
Attachment #237139 - Flags: superreview+
Attachment #237139 - Flags: review?(bugmail)
Attachment #237139 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Flags: blocking1.9a1?
Flags: in-testsuite-
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: xptoolkit.xul → xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: