Bug 333668, fix uninitialized lastnode, r+sr=sicking